--- a/Hawaii/UI/Storyboard/Dashboard.storyboard
+++ b/Hawaii/UI/Storyboard/Dashboard.storyboard
@@ -135,16 +135,7 @@
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         </collectionViewFlowLayout>
-                                        <cells>
-                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" misplaced="YES" id="8hR-cg-Uiz">
-                                                <rect key="frame" x="8" y="8" width="50" height="50"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                </view>
-                                            </collectionViewCell>
-                                        </cells>
+                                        <cells/>
                                     </collectionView>
                                 </subviews>
                                 <constraints>
@@ -184,26 +175,77 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LuD-D6-BoG">
-                                <rect key="frame" x="52" y="122" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type of leave" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LuD-D6-BoG">
+                                <rect key="frame" x="136.5" y="20" width="102" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cwL-B3-XWA">
-                                <rect key="frame" x="137" y="51" width="155" height="162"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cwL-B3-XWA">
+                                <rect key="frame" x="28" y="51" width="320" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="oyl-RW-Nsg"/>
+                                </constraints>
                             </pickerView>
-                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="EeG-bj-h9t">
-                                <rect key="frame" x="0.0" y="191" width="375" height="162"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="EeG-bj-h9t">
+                                <rect key="frame" x="28" y="192" width="320" height="100"/>
+                                <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="PhL-Q8-P4E"/>
+                                </constraints>
                                 <date key="date" timeIntervalSinceReferenceDate="551778387.55520701">
                                     <!--2018-06-27 07:46:27 +0000-->
                                 </date>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="textColor">
+                                        <color key="value" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="highlightsToday" value="NO"/>
+                                </userDefinedRuntimeAttributes>
+                            </datePicker>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rre-HC-BMC">
+                                <rect key="frame" x="149" y="161" width="77" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="End date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JJR-yx-EbL">
+                                <rect key="frame" x="153.5" y="302" width="68" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="B30-ko-KnE">
+                                <rect key="frame" x="27.5" y="333" width="320" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="3Ew-LC-UXg"/>
+                                </constraints>
+                                <date key="date" timeIntervalSinceReferenceDate="551889391.40092003">
+                                    <!--2018-06-28 14:36:31 +0000-->
+                                </date>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="textColor">
+                                        <color key="value" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </datePicker>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="rre-HC-BMC" firstAttribute="top" secondItem="cwL-B3-XWA" secondAttribute="bottom" constant="10" id="32q-p8-z0M"/>
+                            <constraint firstItem="cwL-B3-XWA" firstAttribute="centerX" secondItem="EdC-cI-mcM" secondAttribute="centerX" id="4bV-Qz-tnM"/>
+                            <constraint firstItem="B30-ko-KnE" firstAttribute="top" secondItem="JJR-yx-EbL" secondAttribute="bottom" constant="10" id="Nbn-j2-JEG"/>
+                            <constraint firstItem="EeG-bj-h9t" firstAttribute="centerX" secondItem="EdC-cI-mcM" secondAttribute="centerX" id="SbN-EG-qC9"/>
+                            <constraint firstItem="JJR-yx-EbL" firstAttribute="top" secondItem="EeG-bj-h9t" secondAttribute="bottom" constant="10" id="TcH-IR-NRf"/>
+                            <constraint firstItem="rre-HC-BMC" firstAttribute="centerX" secondItem="EdC-cI-mcM" secondAttribute="centerX" id="aqS-8y-DOS"/>
+                            <constraint firstItem="EeG-bj-h9t" firstAttribute="top" secondItem="rre-HC-BMC" secondAttribute="bottom" constant="10" id="dQ2-Al-PbR"/>
+                            <constraint firstItem="cwL-B3-XWA" firstAttribute="top" secondItem="LuD-D6-BoG" secondAttribute="bottom" constant="10" id="eyf-xR-ME1"/>
+                            <constraint firstItem="JJR-yx-EbL" firstAttribute="centerX" secondItem="EdC-cI-mcM" secondAttribute="centerX" id="lOm-08-Yk4"/>
+                            <constraint firstItem="LuD-D6-BoG" firstAttribute="top" secondItem="kLj-WZ-GVq" secondAttribute="top" constant="20" id="ltN-WF-hYF"/>
+                            <constraint firstItem="B30-ko-KnE" firstAttribute="centerX" secondItem="EdC-cI-mcM" secondAttribute="centerX" id="v0D-AE-Ujd"/>
+                            <constraint firstItem="LuD-D6-BoG" firstAttribute="centerX" secondItem="EdC-cI-mcM" secondAttribute="centerX" id="zyf-kQ-D4r"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="kLj-WZ-GVq"/>
                     </view>
                 </viewController>
@@ -318,4 +360,5 @@
             <point key="canvasLocation" x="2842" y="-1602"/>
         </scene>
     </scenes>
+    <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
 </document>
