--- a/Hawaii/UI/Controller/Cell/CalendarCellCollectionViewCell.xib
+++ b/Hawaii/UI/Controller/Cell/CalendarCellCollectionViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -27,7 +27,7 @@
                                 <rect key="frame" x="7" y="34" width="20" height="20"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="LR7-b0-PIh" firstAttribute="centerX" secondItem="VPK-Jw-2ko" secondAttribute="centerX" id="OvD-Gf-pzv"/>
                         </constraints>
@@ -39,17 +39,9 @@
                                 <rect key="frame" x="7" y="34" width="20" height="20"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="18i-bB-UKL" firstAttribute="centerX" secondItem="uop-zY-hSg" secondAttribute="centerX" id="QHD-70-3N4"/>
-                        </constraints>
-                    </view>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0HN-rj-a26">
-                        <rect key="frame" x="0.0" y="55" width="68" height="1"/>
-                        <color key="backgroundColor" red="0.83075362747235082" green="0.83367367981913687" blue="0.84243383685949491" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                        <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="1"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="1" id="I7t-Ur-FUd"/>
                         </constraints>
                     </view>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cYZ-L1-FWF">
@@ -75,11 +67,12 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ciI-x8-T8J">
                         <rect key="frame" x="13" y="7" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
             </view>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="ZTg-uK-7eu" firstAttribute="top" secondItem="uop-zY-hSg" secondAttribute="top" id="5SQ-ce-hpl"/>
                 <constraint firstItem="18i-bB-UKL" firstAttribute="height" secondItem="cYZ-L1-FWF" secondAttribute="height" id="5Sw-FR-ZXo"/>
@@ -90,9 +83,7 @@
                 <constraint firstItem="ZTg-uK-7eu" firstAttribute="bottom" secondItem="uop-zY-hSg" secondAttribute="bottom" id="B6j-4Q-k4L"/>
                 <constraint firstItem="ZTg-uK-7eu" firstAttribute="top" secondItem="VPK-Jw-2ko" secondAttribute="top" id="Bnd-4C-crN"/>
                 <constraint firstItem="ZTg-uK-7eu" firstAttribute="centerX" secondItem="VPK-Jw-2ko" secondAttribute="trailing" id="EqX-B8-d6t"/>
-                <constraint firstItem="0HN-rj-a26" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="I4g-zJ-j0M"/>
                 <constraint firstItem="18i-bB-UKL" firstAttribute="top" secondItem="cYZ-L1-FWF" secondAttribute="top" id="IRB-eX-GLr"/>
-                <constraint firstAttribute="bottom" secondItem="0HN-rj-a26" secondAttribute="bottom" id="Krw-7t-naW"/>
                 <constraint firstItem="ciI-x8-T8J" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="Mb9-tT-NuD"/>
                 <constraint firstItem="LR7-b0-PIh" firstAttribute="height" secondItem="cYZ-L1-FWF" secondAttribute="height" id="QfU-MA-aZW"/>
                 <constraint firstItem="LR7-b0-PIh" firstAttribute="top" secondItem="cYZ-L1-FWF" secondAttribute="top" id="SmH-cJ-Z0w"/>
@@ -103,7 +94,6 @@
                 <constraint firstItem="xoM-5c-ZaS" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="3" id="iMV-33-EEK"/>
                 <constraint firstItem="cYZ-L1-FWF" firstAttribute="top" secondItem="xoM-5c-ZaS" secondAttribute="bottom" constant="1" id="jK4-w3-hwy"/>
                 <constraint firstItem="ZTg-uK-7eu" firstAttribute="trailing" secondItem="uop-zY-hSg" secondAttribute="trailing" id="k3c-nx-u8p"/>
-                <constraint firstAttribute="trailing" secondItem="0HN-rj-a26" secondAttribute="trailing" id="k8v-Hx-M2R"/>
                 <constraint firstItem="18i-bB-UKL" firstAttribute="centerY" secondItem="cYZ-L1-FWF" secondAttribute="centerY" id="rqG-Oy-iOP"/>
                 <constraint firstItem="ZTg-uK-7eu" firstAttribute="centerX" secondItem="uop-zY-hSg" secondAttribute="leading" id="xnD-nK-N9c"/>
             </constraints>
