--- a/Hawaii/UI/Controller/Cell/CalendarCellCollectionViewCell.xib
+++ b/Hawaii/UI/Controller/Cell/CalendarCellCollectionViewCell.xib
@@ -5,7 +5,6 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -21,31 +20,43 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VPK-Jw-2ko">
-                        <rect key="frame" x="0.0" y="0.0" width="34" height="56"/>
+                        <rect key="frame" x="4" y="26" width="25" height="25"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LR7-b0-PIh">
-                                <rect key="frame" x="7" y="34" width="20" height="20"/>
+                                <rect key="frame" x="2.5" y="2" width="20" height="20"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="LR7-b0-PIh" firstAttribute="centerX" secondItem="VPK-Jw-2ko" secondAttribute="centerX" id="OvD-Gf-pzv"/>
+                            <constraint firstAttribute="height" constant="25" id="pMR-iJ-47c"/>
+                            <constraint firstAttribute="width" constant="25" id="swa-fN-0G7"/>
+                        </constraints>
+                    </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ljI-Of-EiD">
+                        <rect key="frame" x="21.5" y="26" width="25" height="25"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="25" id="Cae-pw-YMg"/>
+                            <constraint firstAttribute="width" constant="25" id="UAm-gA-ywP"/>
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uop-zY-hSg">
-                        <rect key="frame" x="34" y="0.0" width="34" height="56"/>
+                        <rect key="frame" x="39" y="26" width="25" height="25"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="18i-bB-UKL">
-                                <rect key="frame" x="7" y="34" width="20" height="20"/>
+                                <rect key="frame" x="2.5" y="2" width="20" height="20"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstAttribute="height" constant="25" id="8mD-Oe-278"/>
                             <constraint firstItem="18i-bB-UKL" firstAttribute="centerX" secondItem="uop-zY-hSg" secondAttribute="centerX" id="QHD-70-3N4"/>
+                            <constraint firstAttribute="width" constant="25" id="guY-eo-gfP"/>
                         </constraints>
                     </view>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cYZ-L1-FWF">
-                        <rect key="frame" x="24" y="34" width="20" height="20"/>
+                        <rect key="frame" x="24" y="28" width="20" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="7iZ-Y7-Vg1"/>
                             <constraint firstAttribute="width" secondItem="cYZ-L1-FWF" secondAttribute="height" multiplier="1:1" id="eln-38-L2x"/>
@@ -74,28 +85,26 @@
             </view>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="ZTg-uK-7eu" firstAttribute="top" secondItem="uop-zY-hSg" secondAttribute="top" id="5SQ-ce-hpl"/>
+                <constraint firstItem="uop-zY-hSg" firstAttribute="bottom" secondItem="VPK-Jw-2ko" secondAttribute="bottom" id="5LU-ht-u9M"/>
                 <constraint firstItem="18i-bB-UKL" firstAttribute="height" secondItem="cYZ-L1-FWF" secondAttribute="height" id="5Sw-FR-ZXo"/>
                 <constraint firstItem="cYZ-L1-FWF" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="5kl-Wa-vIP"/>
-                <constraint firstItem="ZTg-uK-7eu" firstAttribute="bottom" secondItem="VPK-Jw-2ko" secondAttribute="bottom" id="7Tn-SR-CKi"/>
+                <constraint firstItem="ZTg-uK-7eu" firstAttribute="bottom" secondItem="VPK-Jw-2ko" secondAttribute="bottom" constant="5" id="7Tn-SR-CKi"/>
                 <constraint firstItem="xoM-5c-ZaS" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="9bZ-2w-XxU"/>
-                <constraint firstItem="ZTg-uK-7eu" firstAttribute="leading" secondItem="VPK-Jw-2ko" secondAttribute="leading" id="9iw-f7-WaR"/>
-                <constraint firstItem="ZTg-uK-7eu" firstAttribute="bottom" secondItem="uop-zY-hSg" secondAttribute="bottom" id="B6j-4Q-k4L"/>
-                <constraint firstItem="ZTg-uK-7eu" firstAttribute="top" secondItem="VPK-Jw-2ko" secondAttribute="top" id="Bnd-4C-crN"/>
-                <constraint firstItem="ZTg-uK-7eu" firstAttribute="centerX" secondItem="VPK-Jw-2ko" secondAttribute="trailing" id="EqX-B8-d6t"/>
+                <constraint firstItem="ZTg-uK-7eu" firstAttribute="leading" secondItem="VPK-Jw-2ko" secondAttribute="leading" constant="-4" id="9iw-f7-WaR"/>
                 <constraint firstItem="18i-bB-UKL" firstAttribute="top" secondItem="cYZ-L1-FWF" secondAttribute="top" id="IRB-eX-GLr"/>
                 <constraint firstItem="ciI-x8-T8J" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="Mb9-tT-NuD"/>
                 <constraint firstItem="LR7-b0-PIh" firstAttribute="height" secondItem="cYZ-L1-FWF" secondAttribute="height" id="QfU-MA-aZW"/>
                 <constraint firstItem="LR7-b0-PIh" firstAttribute="top" secondItem="cYZ-L1-FWF" secondAttribute="top" id="SmH-cJ-Z0w"/>
                 <constraint firstItem="ciI-x8-T8J" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="7" id="T6F-iJ-d9R"/>
+                <constraint firstItem="cYZ-L1-FWF" firstAttribute="centerY" secondItem="ljI-Of-EiD" secondAttribute="centerY" id="TfR-b0-Poa"/>
                 <constraint firstItem="LR7-b0-PIh" firstAttribute="width" secondItem="cYZ-L1-FWF" secondAttribute="width" id="aLV-5H-aCI"/>
                 <constraint firstItem="LR7-b0-PIh" firstAttribute="centerY" secondItem="cYZ-L1-FWF" secondAttribute="centerY" id="bxH-xC-wsH"/>
                 <constraint firstItem="18i-bB-UKL" firstAttribute="width" secondItem="cYZ-L1-FWF" secondAttribute="width" id="fpG-f9-JJB"/>
                 <constraint firstItem="xoM-5c-ZaS" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="3" id="iMV-33-EEK"/>
-                <constraint firstItem="cYZ-L1-FWF" firstAttribute="top" secondItem="xoM-5c-ZaS" secondAttribute="bottom" constant="1" id="jK4-w3-hwy"/>
-                <constraint firstItem="ZTg-uK-7eu" firstAttribute="trailing" secondItem="uop-zY-hSg" secondAttribute="trailing" id="k3c-nx-u8p"/>
+                <constraint firstItem="ZTg-uK-7eu" firstAttribute="trailing" secondItem="uop-zY-hSg" secondAttribute="trailing" constant="4" id="k3c-nx-u8p"/>
                 <constraint firstItem="18i-bB-UKL" firstAttribute="centerY" secondItem="cYZ-L1-FWF" secondAttribute="centerY" id="rqG-Oy-iOP"/>
-                <constraint firstItem="ZTg-uK-7eu" firstAttribute="centerX" secondItem="uop-zY-hSg" secondAttribute="leading" id="xnD-nK-N9c"/>
+                <constraint firstItem="ljI-Of-EiD" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="sf1-mc-JFN"/>
+                <constraint firstItem="ljI-Of-EiD" firstAttribute="bottom" secondItem="VPK-Jw-2ko" secondAttribute="bottom" id="zIC-Ne-Gj3"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="68" height="56"/>
@@ -104,7 +113,8 @@
                 <outlet property="afternoonView" destination="uop-zY-hSg" id="dEV-hm-ZUk"/>
                 <outlet property="circleView" destination="xoM-5c-ZaS" id="KB8-UJ-LQe"/>
                 <outlet property="dateLabel" destination="ciI-x8-T8J" id="M1f-BB-wot"/>
-                <outlet property="leaveImage" destination="cYZ-L1-FWF" id="3YI-49-az4"/>
+                <outlet property="fullDayImage" destination="cYZ-L1-FWF" id="3YI-49-az4"/>
+                <outlet property="fullDayView" destination="ljI-Of-EiD" id="KLJ-ke-8eE"/>
                 <outlet property="morningImage" destination="LR7-b0-PIh" id="P0h-fV-dCj"/>
                 <outlet property="morningView" destination="VPK-Jw-2ko" id="guu-jJ-W57"/>
             </connections>
